<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="fill_parent"
            android:layout_height="400dp"
            android:layout_gravity="top"
            android:contentDescription="@string/App_Logo"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="32dp"
            android:text="@string/welcome_message"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_bluetooth_text" />

        <Button
            android:id="@+id/nextWifiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_wifi_text"
            android:enabled="false"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/arduinoExplanationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/About"
            android:background="@drawable/blue_button"
            app:backgroundTint="@null"/>

    </LinearLayout>

    <!-- TextView for version at the bottom of the screen -->
    <TextView
        android:id="@+id/versionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Version: "
        android:textSize="14sp" />

</RelativeLayout>


